# senpi

./: .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  biome.json  opencode.json  package-lock.json  package.json  pnpm-workspace.yaml  task-2-fixture-list.txt  task-2-fixture-roundtrip.txt  task-9-critical-context-deleted.txt  task-9-no-snapshots.txt  task-9-test-count.txt  test.sh  tsconfig.json
.codex/: cleanup.sh  setup.sh
.cursor/: settings.json
.devcontainer/: devcontainer.json
.github/: upstream.json
.github/agent/: README.md  (+3 more)
.husky/: pre-commit
.omo/: ralph-loop.local.md
.senpi/: settings.json
crates/senpi-pty/: Cargo.toml  index.d.ts  index.js  package.json  senpi_pty.darwin-arm64.node
crates/senpi-pty/src/: lib.rs  session.rs  session_tests.rs  session_threads.rs  signals.rs
crates/senpi-pty/tests/: manual_qa.rs
scripts/: AGENTS.md  archive-upstream-agent-report.mjs  archive-upstream-agent-report.test.mjs  build-all.mjs  build-all.test.mjs  build-binaries.sh  check-mcp-docs.test.mjs  check-neo.mjs  check-pinned-deps.mjs  check-pty-prebuild-fresh.test.mjs  check-upstream-release.mjs  check-upstream-release.test.mjs  copy-pty-native.mjs  create-root-senpi-wrapper.mjs  create-root-senpi-wrapper.test.mjs  devenv-setup.mjs  generate-coding-agent-install-lock.mjs  generate-coding-agent-shrinkwrap.mjs  local-release.mjs  local-release.test.mjs  prepare-bun-compile-assets.mjs  prepare-senpi-bundled-workspaces.mjs  prepare-senpi-bundled-workspaces.prepare.test.mjs  prepare-senpi-bundled-workspaces.test.mjs  probe-native-pty-lifecycle.mjs  publish.mjs  release-changelog.mjs  release-packages.mjs  release.mjs  release.test.mjs  run-pr530-benchmarks.mjs  sync-versions.js  sync-versions.test.mjs  tool-stats.ts  upstream-release-worthy.mjs  upstream-release-worthy.test.mjs  verify-auth-broker-gateway.mjs
(+331 files in other folders)
